# skipgram

./: .gitignore  LICENSE  README.md  get_embeddings.py  load_data.py  model.py  setup.cfg  setup.py  skipgram.py  test_model.py  train_model.py  train_skipgram.py  vocab.py  word.py
skipgram/: compute_frequencies.py  embeddings.py  load_data.py  train.py  utils.py  vocab.py
skipgram/skipgram_carlosfranzreb.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_loaddata.py  test_model.py
tests/data/full/: cnt_vocab.json  data.txt  results.json  vocab.json
tests/data/long/: data.txt  results.json  vocab.json
