[metadata]
name = skipgram-carlosfranzreb
version = 0.0.1
author = Carlos Franzreb
author_email = carlosfranzreb[at]gmail.com
description = PyTorch implementation of Skip-gram with negative sampling and subsampling of frequent words.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carlosfranzreb/skipgram
project_urls =
    Bug Tracker = https://github.com/carlosfranzreb/skipgram/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = skipgram
packages = find:
python_requires = >=3.6

[options.packages.find]
where = skipgram